--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Catalog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/common.0a1df85fd49d0c6d97ed.min.css">
-    <link rel="stylesheet" href="src/css/catalog.0a1df85fd49d0c6d97ed.min.css">
+    <link rel="stylesheet" href="src/css/common.a10db98066307c3c86a7.min.css">
+    <link rel="stylesheet" href="src/css/catalog.a10db98066307c3c86a7.min.css">
 </head>
 <body>
 
@@ -165,8 +165,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/lon.png">
                     </div>
@@ -187,8 +186,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/mastak.png">
                     </div>
@@ -209,8 +207,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/verna.png">
                     </div>
@@ -232,8 +229,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/creative.png">
                     </div>
@@ -254,8 +250,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/ivkon.png">
                     </div>
@@ -276,8 +271,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/lon.png">
                     </div>
@@ -298,8 +292,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/artox.png">
                     </div>
@@ -321,8 +314,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/zizior.png">
                     </div>
@@ -342,8 +334,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/virus.png">
                     </div>
@@ -365,8 +356,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/toxhunt.png">
                     </div>
@@ -387,8 +377,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/pr.png">
                     </div>
@@ -409,8 +398,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/muypa.png">
                     </div>
@@ -431,8 +419,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/texno.png">
                     </div>
@@ -453,8 +440,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/electromaster.png">
                     </div>
@@ -476,8 +462,7 @@
                    data-when="enter"
                    data-from="0.5"
                    data-to="0"
-                   data-translatey="50"
-                   data-opacity="0.5">
+                   data-translatey="50">
                     <div class="company__img-wrapper">
                         <img class="company__img" src="assets/icons/companies/1c.png">
                     </div>
@@ -526,7 +511,7 @@
         </div>
     </div>
 </div>
-<script src="src/js/common.0a1df85fd49d0c6d97ed.min.js"></script>
-<script src="src/js/catalog.0a1df85fd49d0c6d97ed.min.js"></script>
+<script src="src/js/common.a10db98066307c3c86a7.min.js"></script>
+<script src="src/js/catalog.a10db98066307c3c86a7.min.js"></script>
 </body>
 </html>
