update after bugs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Index</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/common.a10db98066307c3c86a7.min.css">
-    <link rel="stylesheet" href="src/css/index.a10db98066307c3c86a7.min.css">
+    <link rel="stylesheet" href="src/css/common.62c95a4c087715a01de7.min.css">
+    <link rel="stylesheet" href="src/css/index.62c95a4c087715a01de7.min.css">
 </head>
 <body>
 <header class="header-inner header-inner--main">
@@ -27,7 +27,7 @@
              data-easing="easein">
     </div>
     <div class="molotok scrollme">
-        <img src="assets/icons/animation/molotok.png"
+        <img src="assets/icons/animation/molotok.min.png"
              alt="molotok"
              class="molotok__img animateme"
              data-when="entry"
@@ -61,12 +61,12 @@
              data-easing="easein">
     </div>
     <div class="nakovalny">
-        <img src="assets/icons/animation/nakavalny.png"
+        <img src="assets/icons/animation/nakavalny.min.png"
              alt="nakavalny"
              class="nakovalny__img">
     </div>
     <div class="smoke scrollme">
-        <img src="assets/icons/animation/smoke.png"
+        <img src="assets/icons/animation/smoke.min.png"
              alt="smoke"
              class="smoke__img animateme"
              data-when="entry"
@@ -79,7 +79,7 @@
     </div>
     <div class="b-container header-inner__wrapper header">
         <a href="/" class="header__link">
-            <img src="assets/icons/MTBank-logo.svg" alt="" class="header__logo">
+            <img src="assets/icons/mtbank.svg" alt="" class="header__logo">
         </a>
         <div class="header__contacts-wrapper">
             <img src="assets/icons/phone.svg" alt="contacts" class="header__contacts">
@@ -106,11 +106,11 @@
             </p>
         </div>
         <div class="buttons buttons--main">
-            <a href="#" class="buttons__item buttons__item--blue" data-type="seller">
+            <a href="#" class="buttons__item buttons__item--blue" data-scroll="buyer">
                 <p class="buttons__item-title">продавать</p>
                 <span class="buttons__item-subtitle">со 100% предоплатой</span>
             </a>
-            <a href="#" class="buttons__item buttons__item--red" data-type="buyer">
+            <a href="#" class="buttons__item buttons__item--red" data-scroll="seller">
                 <p class="buttons__item-title">покупать</p>
                 <span class="buttons__item-subtitle">с отсрочкой платежа</span>
             </a>
@@ -123,7 +123,7 @@
     <div class="slider-first__line-gradient">
         <div class="b-container">
 
-            <div class="slider-first">
+            <div class="slider-first" data-slider="buyer">
                 <!-- Swiper -->
                 <div class="slider-first__swiper">
                     <div class="swiper-container first-swiper-js">
@@ -208,7 +208,7 @@
     <div class="slider-second__line-gradient">
 
         <div class="b-container">
-            <div class="slider-second">
+            <div class="slider-second" data-slider="seller">
                 <!-- Swiper -->
                 <div class="slider-second__swiper">
                     <div class="swiper-container second-swiper-js">
@@ -245,7 +245,7 @@
                                         <img src="assets/icons/number-3.png" alt="number"
                                              class="slider-second__item-img">
                                         <p class="slider-second__item-description">
-                                            Откроете кредитную линию без перехода на рко с минимальным пакетом
+                                            Откроете кредитную линию без перехода на РКО с минимальным пакетом
                                             документов
                                         </p>
                                     </div>
@@ -277,7 +277,7 @@
                                         <img src="assets/icons/number-1.png" alt="number"
                                              class="slider-second__item-img">
                                         <p class="slider-second__item-description">
-                                            <span class="text-uppercase text-red text-bold">без перехода</span> на рко
+                                            <span class="text-uppercase text-red text-bold">без перехода</span> на РКО
                                         </p>
                                     </div>
                                     <div class="slider-second__item">
@@ -503,7 +503,7 @@
 </header>
 <div id="catalog" class="catalog">
     <div class="molotok-bottom">
-        <img src="assets/icons/animation/molotok-bottom.png"
+        <img src="assets/icons/animation/molotok-bottom.min.png"
              alt="molotok-bottom"
              class="molotok-bottom__img">
     </div>
@@ -717,7 +717,7 @@
     </form>
 </div>
 
-<script src="src/js/common.a10db98066307c3c86a7.min.js"></script>
-<script src="src/js/index.a10db98066307c3c86a7.min.js"></script>
+<script src="src/js/common.62c95a4c087715a01de7.min.js"></script>
+<script src="src/js/index.62c95a4c087715a01de7.min.js"></script>
 </body>
 </html>
